# home

algorithms/: BinaryTree.cpp  CMakeLists.txt  DynamicGraph.cpp  DynamicGraph.h  SegmentTree.cpp  SegmentTree.h  Treap.cpp  Treap.h  a1.cpp  a2.cpp  a2.cpp.orig  a3.cpp  a4.cpp  a5.cpp  b1.cpp  b2.cpp  b2.cpp.orig  b4.cpp  b5.cpp  binary  c1.cpp  c2.cpp  c3.cpp  c4.cpp  c5.cpp  c6.cpp  d1.cpp  d2.cpp  d2.cpp.orig  d3.cpp  d4.cpp  d5.cpp  dsu.cpp  dsu.h  e2.cpp  e3.cpp  e4.cpp  e5.cpp  fixed_set.cpp  fixed_set.h  (+15 more)
algorithms/Sandbox/: CMakeLists.txt  CMakeSettings.json  Sandbox.cpp  Sandbox.h
algorithms/VS_contest/: VS_contest.cpp  VS_contest.sln  VS_contest.vcxproj  VS_contest.vcxproj.filters
algorithms/VS_contest/Debug/: VS_contest.ilk  vc142.idb
algorithms/VS_contest/Debug/VS_contest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VS_contest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
algorithms/VS_contest/Release/: VS_contest.iobj  VS_contest.ipdb  VS_contest.nativecodeanalysis.sarif  VS_contest.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml
algorithms/VS_contest/Release/VS_contest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VS_contest.lastbuildstate  VS_contest.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
algorithms/tests/: 01.txt  02.txt  04.txt
game/: CMakeLists.txt  field.cpp  field.h  input  main.cpp  square.cpp  square.h
